--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,93 +1,50 @@
 *{
     box-sizing: border-box;
 }
-:root {
-    --primary-color: #ffb900;
-    --font-heading: Sen, sans-serif;
-}
-
-html{
-    font-size: 62.5%;
-}
-body{
-    font-size: 1.6rem; /* 16px */
-    font-family: "Poppins", sans-serif;
-}
 /* Common */
-.heading{
-    font-family: var(--font-heading);
-    color: #171100;
-    font-weight: 700;
-    letter-spacing: -0.02em;
-}
-.heading.lv1{ /* Lưu ý khi 2 class nằm trong một slector thì cần phải viết liền nhau */
-    font-size: 5.8rem;
-    line-height: 1.17;
-}
-.heading.lv2{/* Lưu ý khi 2 class nằm trong một slector thì cần phải viết liền nhau */
-    font-size: 3.8rem; /* 38px */
-    line-height: 1.26;
-}
 a{
-    text-decoration: none;
+    text-decoration: none;;
 }
-.btn{
-    display: inline-block;
-    min-width: 118px;
-    padding: 0 16px;
-    color: #FFFfff;
-    text-align: center;
-    font-size: 1.6rem;
-    line-height: 50px;
-    font-weight: 600;
-    border-radius: 999px;
-    background: #171100;
-}
-.btn:hover {
-    opacity: 0.9;
-    cursor: pointer;
-}
-
-.heading {
-    font-family: var(--font-heading);
-    font-weight: 700;
-    letter-spacing: -0.02em;
-    color: #171100;
-}
-
 .main-content{
     width: 1170px;
     max-width: calc(100% - 48px);
     margin-left: auto;
     margin-right: auto;
+
 }
-.line-clamp{
-    display: -webkit-box;
-    -webkit-line-clamp: var(--line-clamp,1);
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+.btn{
+    display: inline-block;
+    min-width: 118px;
+    padding: 0 16px;
+    line-height: 50px;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    border-radius: 24.5px;
+    background: #171100;
 }
-.line-clamp.line-2{
-    --line-clamp: 2;
+html{
+    font-size: 62.5%;
 }
-.break-all{
-    word-break: break-word;
+body{
+    font-size: 1.6rem;
+    font-family: "Poppins", sans-serif;
 }
-/* Header */
+
+/* header */
 .header{
-    background: #FFFCF4;
 }
 .header.fixed{
-    position: sticky;
-    top: -28px;
-    z-index: 1;
+    position:sticky;
+    top:-28px;
 }
 .header .body{
     display: flex;
     align-items: center;
+    
     padding: 36px 0 8px;
 }
-
 .nav{
     margin-left: auto;
 }
@@ -95,21 +52,17 @@ a{
     display: flex;
 }
 .nav a{
-    position: relative;
     padding: 8px 21px;
     color: #5F5B53;
-    font-size: 1.6rem; /* 16px */
-    font-weight: 400;
-    line-height: 1.75;
+    font-size: 1.6rem;
 }
 .nav a:hover,
 .nav li.active a{
-    font-weight: 600;
     text-shadow: 1px 0 0 currentColor;
     color: #171100;
 }
 .nav li.active a::after{
-    position: absolute;
+    position:absolute;
     left: 21px;
     bottom: 6px;
     content: "";
@@ -119,244 +72,9 @@ a{
     background: #171100;
     border-radius: 1px;
 }
-.header .sign-up-btn{
+.header .btn-sign-up{
     min-width: 144px;
 }
 .header .action{
     margin-left: 49px;
-}
-/* Hero */
-.hero{
-    padding-top: 56px 0 65px;
-    background: #FFFCF4;
-}
-.hero .body{
-    display: flex;
-}
-/* Hero left*/
-.hero .media-block{
-    position: relative;
-    width: 48%;
-}
-
-.hero .media-block .img{
-    display: block;
-    width: 470px;
-    height: 685px;
-    object-fit: cover;
-    border-radius: 20px;
-    display: block;
-}
-.hero-summary{
-    position: absolute;
-    right: 0;
-    bottom: 48px;
-    width: 270px;
-    padding: 24px;
-    border-radius: 12px;
-    background: #FFF;
-    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
-}
-.hero-summary .item{
-    display: flex;
-    align-items: center;
-}
-.hero-summary .item + .item {
-    margin-top: 22px;
-}
-.hero-summary .icon{
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #FFF9E8;
-}
-.hero-summary .item:nth-of-type(2) .icon {
-    background: #fcefff;
-}
-
-.hero-summary .item:nth-of-type(3) .icon {
-    background: #ebeaff;
-}
-
-.hero-summary .info {
-    margin-left: 16px;
-}
-
-.hero-summary .label {
-    font-size: 1.4rem;
-    line-height: 1.86;
-    color: #5f5b53;
-}
-
-.hero-summary .title {
-    font-weight: 600;
-    font-size: 1.8rem;
-    line-height: 1.67;
-    color: #171100;
-}
-/* Hero right */
-.hero .content-block {
-    width: 52%;
-    padding: 64px 0 0 130px;
-}
-
-
-.hero .desc{
-    margin-top: 22px;
-    color: #5F5B53;
-    font-size: 1.8rem; /* 18px */
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.66;
-}
-.hero .cta-group{
-    display: flex;
-    align-items: center;
-    margin: 38px 0 48px;
-
-}
-.hero-cta{
-    min-width: 180px;
-    line-height: 64px;
-    background: var(--primary-color);
-}
-.hero .watch-video{
-    display: flex;
-    align-items: center;
-    margin-left: 28px;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-
-}
-.hero .watch-video .icon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: #fff;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.07);
-}
-.hero .watch-video span{
-    margin-left: 14px;
-    color: #171100;
-    font-size: 1.8rem; /* 18px */
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1.66;
-}
-.hero .stats{
-    margin: 8px 0 0 -28px;
-}
-.hero .stats strong{
-    padding: 0 8px 0 28px;
-    color: #171100;
-    font-family: var(--font-heading);
-    font-size: 4.4rem; /* 44px */
-    font-weight: 700;
-    line-height: 1.22;
-}
-
-/* popular */
-.popular{
-    margin-top: 135px;
-    padding: 65px 0 ;
-}
-.popular .popular-top{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.popular-top .desc{
-    margin-top: 16px;
-    color: #5F5B53;
-    width: 458px;
-    font-size: 1.8rem; /* 18px */
-    font-weight: 400;
-    line-height: 1.67;
-}
-.popular-top .control-btn:hover{
-    color: #fff;
-    cursor: pointer;
-}
-
-.popular .course-list{
-    display: flex;
-    gap: 30px;
-    margin-top: 55px;
-}
-.popular .course-item{
-    flex: 1;
-    border-radius: 12px;
-    border: 1px solid #E2DFDA;
-    background: #FFF;
-  
-}
-.popular .course-item:hover{
-    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
-    border-color: transparent;
-}
-.popular .course-item a .thumb {
-    width: calc(100% + 2px);
-    height: 278px;
-    margin: -1px;
-    border-radius: 12px 12px 0px 0px;
-    object-fit: cover;
-}
-
-.popular .course-item .info{
-    padding: 16px 22px 22px;
-}
-.popular .course-item .rating,
-.popular .course-item .foot,
-.popular .course-item .head{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.popular .course-item .title a{
-    padding-right: 6px;
-    color: #171100;
-    font-size: 1.8rem; /* 18px */
-    font-weight: 600;
-    line-height: 1.66;
-}
-.popular  .rating .value{
-    padding-left: 6px;
-    color: #FEA31B;
-    font-size: 1.6rem; /* 16px */
-    font-weight: 400;
-    line-height: 1.75;
-}
-.popular .course-item .desc{
-    margin-top: 6px;/*thiếu */
-    color: #5F5B53;
-    font-size: 1.4rem; /* 14px */
-    font-weight: 400;
-    line-height: 1.85;
-}
-.popular .course-item .foot{
-    /* margin: 22px;không có cái này vì đã đặt trong thẻ div bao bọc rồi */
-    margin-top: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.popular .btn-book{
-    border: none;
-    color: #FFF;
-    text-align: center;
-    font-size: 1.4rem; /* 14px */
-    font-weight: 600;
-    border-radius: 25px;
-}
-.popular .btn-book:hover{
-    
-    background: var(--primary-color);
-    
 }
